[package]
name = "anchor-escrow"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "anchor_escrow"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
anchor-spl = "0.32.1"
solana-account-info = "2.3.0"

[dev-dependencies]
litesvm = "0.9.1"
litesvm-token = "0.9.1"

solana-account = "3.4"
solana-address = "2.1"
solana-hash = "4.1"
solana-instruction = "3.1"
solana-keypair = "3.1"
solana-message = "3.0"
solana-native-token = "3.0"
solana-sdk-ids = "3.1"
solana-signer = "3.0"
solana-system-interface = "3.0"
solana-transaction = "3.0"
solana-rpc-client = "2.3"
spl-token-2022 = { version = "8.0.1", features = ["no-entrypoint"] }
solana-clock = "~3.0"
